# name: ClickhouseTestTrends.test_insight_trends_aggregate
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT count(*) as data
  FROM
    (SELECT e.timestamp as timestamp
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-15 23:59:59') ) events
  '
---
# name: ClickhouseTestTrends.test_insight_trends_aggregate.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-15 23:59:59') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_basic
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_basic.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-14 00:00:00')
       AND timestamp <= toDateTime('2012-01-14 23:59:59') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_clean_arg
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  e.properties as properties
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59')
             AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_clean_arg.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.properties as properties,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-14 00:00:00')
       AND timestamp <= toDateTime('2012-01-14 23:59:59')
       AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.10
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-01 00:00:00')
       AND timestamp <= toDateTime('2012-01-15 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.11
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(15)
              UNION ALL SELECT toStartOfDay(toDateTime('2012-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['val', 'notval'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(DISTINCT pdi.person_id) as total,
                            toStartOfDay(timestamp, 'UTC') as day_start,
                            breakdown_value
           FROM
             (SELECT person_id,
                     min(timestamp) as timestamp,
                     breakdown_value
              FROM
                (SELECT pdi.person_id as person_id,
                        timestamp,
                        replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') as breakdown_value
                 FROM events e
                 INNER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) as pdi ON events.distinct_id = pdi.distinct_id
                 WHERE e.team_id = 2
                   AND event = '$pageview'
                   AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
                   AND timestamp <= toDateTime('2012-01-15 23:59:59')
                   AND replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') in (['val', 'notval']) )
              GROUP BY person_id,
                       breakdown_value) AS pdi
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.12
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.properties as properties,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59')
       AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.2
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT person_id,
                  min(timestamp) as timestamp
           FROM
             (SELECT e.timestamp as timestamp,
                     pdi.person_id as person_id
              FROM events e
              INNER JOIN
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 2
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
              WHERE team_id = 2
                AND event = '$pageview'
                AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
                AND timestamp <= toDateTime('2012-01-15 23:59:59') )
           GROUP BY person_id)
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.3
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.4
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-01 00:00:00')
       AND timestamp <= toDateTime('2012-01-15 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.5
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(15)
              UNION ALL SELECT toStartOfDay(toDateTime('2012-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['val', 'notval'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toStartOfDay(timestamp, 'UTC') as day_start,
                            replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') as breakdown_value
           FROM events e
           WHERE e.team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59')
             AND replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') in (['val', 'notval'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.6
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.properties as properties,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59')
       AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.7
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0
        AND ((has(['some_val'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'key'), '^"|"$', '')))
             AND (has(['some_val'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'key'), '^"|"$', ''))))) person ON pdi.person_id = person.id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-01 00:00:00')
       AND timestamp <= toDateTime('2012-01-15 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.8
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(15)
              UNION ALL SELECT toStartOfDay(toDateTime('2012-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['val', 'notval'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT counts as total,
                            timestamp as day_start,
                                         breakdown_value
           FROM
             (SELECT d.timestamp,
                     COUNT(DISTINCT person_id) counts,
                     breakdown_value
              FROM
                (SELECT toStartOfDay(toDateTime(timestamp), 'UTC') as timestamp
                 FROM events e
                 WHERE team_id = 2
                   AND timestamp >= '2011-12-25 00:00:00'
                   AND timestamp <= toDateTime('2012-01-15 23:59:59')
                 GROUP BY timestamp) d
              CROSS JOIN
                (SELECT toStartOfDay(toDateTime(timestamp), 'UTC') as timestamp,
                        pdi.person_id AS person_id,
                        replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') as breakdown_value
                 FROM events e
                 INNER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) as pdi ON events.distinct_id = pdi.distinct_id
                 INNER JOIN
                   (SELECT id
                    FROM person
                    WHERE team_id = 2
                    GROUP BY id
                    HAVING max(is_deleted) = 0
                    AND ((has(['some_val'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'key'), '^"|"$', '')))
                         AND (has(['some_val'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'key'), '^"|"$', ''))))) person ON person.id = pdi.person_id
                 WHERE e.team_id = 2
                   AND event = '$pageview'
                   AND timestamp >= '2011-12-25 00:00:00'
                   AND timestamp <= toDateTime('2012-01-15 23:59:59')
                 GROUP BY timestamp,
                          person_id,
                          breakdown_value) e
              WHERE e.timestamp <= d.timestamp
                AND e.timestamp > d.timestamp - INTERVAL 7 DAY
              GROUP BY d.timestamp,
                       breakdown_value
              ORDER BY d.timestamp)
           WHERE 11111 = 11111
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') ))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.9
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.properties as properties,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0
        AND (((has(['some_val'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'key'), '^"|"$', ''))))
             AND (has(['some_val'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'key'), '^"|"$', ''))))) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= '2011-12-25 00:00:00'
       AND timestamp <= toDateTime('2012-01-14 23:59:59')
       AND (((has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))))) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-14 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-14 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toDateTime('2012-01-14 00:00:00')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging_multiple
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$action'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging_multiple.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging_multiple.2
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-14 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-14 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toDateTime('2012-01-14 00:00:00')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging_multiple.3
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-14 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-14 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$action'
             AND timestamp >= toDateTime('2012-01-14 00:00:00')
             AND timestamp <= toDateTime('2012-01-15 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging_skipped_interval
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-14 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2011-12-31 00:00:00'), 'UTC'), toDateTime('2012-01-14 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2011-12-31 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2011-12-31 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-14 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsCaching.test_insight_trends_merging_skipped_interval.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-16 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-02 00:00:00'), 'UTC'), toDateTime('2012-01-16 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-02 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-02 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-16 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsGroups.test_aggregating_by_group
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-12 00:00:00') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2020-01-01 00:00:00'), 'UTC'), toDateTime('2020-01-12 00:00:00'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2020-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT $group_0) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  e.$group_0 as $group_0
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2020-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2020-01-12 00:00:00')
             AND (NOT has([''], "$group_0")) )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsGroups.test_aggregating_by_group.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT $group_0 AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.$group_0 as $group_0
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2020-01-02 00:00:00')
       AND timestamp <= toDateTime('2020-01-02 23:59:59')
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0")) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
